--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "personal-portfolio-react-catv",
   "version": "1.0.0",
+  "private": true,
+  "homepage": "https://AlexTrejo92.github.io/Personal-Portfolio-React-CATV",
   "description": "This is a repo that holds all of the code for my personal portfolio.",
   "main": "index.js",
   "dependencies": {
@@ -10,15 +12,15 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "dotenv": "^16.3.1",
+    "gh-pages": "^5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    
-  },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
